<resources>
    <string name="app_name">FoxSDK</string>
    <string name="fs_starter_pack">礼包</string>
    <string name="fs_verify_code_login">验证码登录</string>
    <string name="fs_password_login">密码登录</string>
    <string name="enter_phone_please">请输入手机号</string>
    <string name="enter_verify_code_please">请输入验证码</string>
    <string name="fs_send_verify_code">发送验证码</string>
    <string name="fs_register_and_login">注册并登录</string>
    <string name="enter_password_please">请输入密码</string>
    <string name="fs_and">和</string>
    <string name="fs_i_read_and_agree">我已阅读并同意</string>
    <string name="fs_user_agreement">《用户协议》</string>
    <string name="fs_privacy_agreement">《隐私政策》</string>
    <string name="fs_fox_coin">狐币：</string>
    <string name="fs_game_history">游戏记录</string>
    <string name="fs_login_now">立即登录</string>
    <string name="fs_login">登录</string>
    <string name="fs_str_claim_and_copy">领取并复制兑换码</string>
    <string name="fs_str_copy_code">复制兑换码</string>
    <string name="fs_str_claim">已领</string>
    <string name="fs_str_redemption_successful">礼包兑换码复制成功</string>
    <string name="fs_cancel">取消</string>
    <string name="fs_next">下一步</string>
    <string name="fs_str_tip">温馨提示</string>
    <string name="confirm">确定</string>
    <string name="fs_str_cancel">取消</string>
    <string name="fs_go_set">去设置</string>

    <string name="fs_camera_and_gallery_permission_title">相机以及相册权限使用说明</string>
    <string name="fs_camera_and_gallery_permission_text">相机：经您授权，我们会收集您的相机信息，以便为您提供扫码、拍照等功能\n相册权限：经您授权，我们会收集您的相册信息，以便为您提供上传和保存图片、视频等功能\n</string>
    <string name="fs_gallery_permission_title">相册权限使用说明</string>
    <string name="fs_gallery_permission_text">经您授权，我们会收集您的相册信息，以便为您提供上传和保存图片、视频等功能\n</string>
    <string name="fs_microphone_permission_title">麦克风权限使用说明</string>
    <string name="fs_microphone_permission_text">经您授权，我们会收集您的录音信息，以便为您提供语音搜索、智能语音交互功能\n</string>
    <string name="fs_camera_permission_title">相机权限使用说明</string>
    <string name="fs_camera_permission_text">经您授权，我们会收集您的相机信息，以便为您提供扫码、拍照等功能\n</string>
    <string name="fs_location_permission_title">位置信息权限使用说明</string>
    <string name="fs_location_permission_text">经您授权，我们会收集您的地理位置信息，以便为您推荐周边的生活服务，以及估算商家和您之间的距离\n</string>
    <string name="fs_media_permission_title">相册权限使用说明</string>
    <string name="fs_media_permission_text">经您授权，我们会收集您的相册信息，以便为您提供上传和保存图片等功能\n</string>
    <string name="fs_video_permission_title">视频权限使用说明</string>
    <string name="fs_video_permission_text">经您授权，我们会收集您的视频信息，以便为您提供上传和保存视频等功能\n</string>
    <string name="fs_audio_permission_title">音频权限使用说明</string>
    <string name="fs_audio_permission_text">经您授权，我们会收集您的音频信息，以便为您提供上传和保存音频等功能\n</string>
    <string name="fs_notification_permission_title">通知权限使用说明</string>
    <string name="fs_notification_permission_text">经您授权，我们会获取您的通知权限，为您提供应用内的消息通知，商品推荐等信息\n</string>
    <string name="fs_str_empty">暂无内容，去别处逛逛吧 ~</string>
    <string name="fs_prompt">提示</string>
    <string name="fs_confirm">确认</string>
    <string name="fs_my_message">我的消息</string>
    <string name="fs_show_latest_100">（只显示最近100条消息）</string>
    <string name="fs_back">返回</string>
    <string name="fs_close">关闭</string>
    <string name="fs_str_recharge_record">充值记录</string>
    <string name="fs_str_a_year_recharge_record">（只显示近一年数据）</string>
    <string name="fs_str_win_fox_coin">赢狐币</string>
    <string name="fs_str_game_record">游戏记录</string>
    <string name="fs_str_game_record_50">（只显示近50条记录）</string>
    <string name="fs_pay_agreement">《支付协议》</string>
    <string name="fs_confirm_order">确认订单</string>
    <string name="fs_confirm_pay">确认支付</string>
    <string name="fs_fox_coin_pay">狐币支付</string>
    <string name="fs_ali_pay">支付宝</string>
    <string name="fs_wechat_pay">微信支付</string>
    <string name="fs_report">举报</string>
    <string name="fs_str_ali_pay">您的设备尚未安装支付宝。请在先安装支付宝再进行操作</string>
    <string name="fs_str_wx_pay">您的设备尚未安装微信。请在先安装微信再进行操作</string>
    <string name="fs_auth_login">授权登录</string>
    <string name="fs_other_login">其他方式登录</string>
    <string name="fs_authed_and_login">授权并登录</string>
    <string name="fs_wish_fox">许愿狐</string>
    <string name="recharge_success">充值成功</string>
    <string name="recharge_fail">充值失败</string>
    <string name="fs_advertise">广告</string>
    <string name="fs_link_error">链接地址有误，请检查</string>
</resources>