<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dp_310"
        android:layout_height="wrap_content"
        android:background="@drawable/fs_dialog_bg"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_12">

        <TextView
            android:id="@+id/fs_tv_alert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/fs_prompt"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fs_tv_alert_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/enter_password_please"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/fs_tv_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fs_tv_alert_title" />

        <LinearLayout
            android:id="@+id/fs_ll_alert_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/fs_tv_confirm"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hjq.shape.view.ShapeTextView
            android:id="@+id/fs_tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_5"
            android:background="@drawable/fs_normal_button"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_10"
            android:text="@string/fs_cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fs_tv_confirm"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fs_tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_5"
            android:background="@drawable/fs_primary_button"
            android:gravity="center"
            android:paddingVertical="@dimen/dp_10"
            android:text="@string/fs_confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fs_tv_cancel" />

        <com.hjq.shape.view.ShapeImageView
            android:visibility="gone"
            android:id="@+id/fs_iv_alert_close"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:src="@drawable/fs_icon_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>